Save templates without the command layer